src/test/ui/consts/issue-91434.stderr
error: expected at least one digit in exponent
  --> $DIR/issue-91434.rs:2:11
   |
LL |     [9; [[9E; h]]];
   |           ^^

error[E0425]: cannot find value `h` in this scope
  --> $DIR/issue-91434.rs:2:15
   |
LL |     [9; [[9E; h]]];
   |               ^ not found in this scope

error[E0308]: mismatched types
  --> $DIR/issue-91434.rs:2:9
   |
LL |     [9; [[9E; h]]];
   |         ^^^^^^^^^ expected `usize`, found array `[[{float}; _]; 1]`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
